@@ -1,3 +1,11 @@
+2018-10-24  Albert ARIBAUD <albert.aribaud@3adev.fr>
+
+	* bits/time64.h: New file.
+	* include/time.h: Replace internal_time_t with __time64_t.
+	* posix/bits/types (__time64_t): Add.
+	* stdlib/Makefile: Add bits/time64.h to includes.
+	* time/tzfile.c: Replace internal_time_t with __time64_t.
+
 2018-10-24  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
 	* include/spawn.h (__posix_spawn, posix_spawn_file_actions_addclose,
